<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SeqControl" Id="{65c6e386-7a69-4e94-8369-8cc173157af0}">
    <Declaration><![CDATA[TYPE ST_SeqControl :
STRUCT
	iRecipeType					:INT;
	iPhaseType					:INT;
	bPhaseEnabled				:BOOL;
	iCurrentPhase				:INT;
	iCurrentStep				:INT;
	iPreviousStep				:INT;
	iTotalSteps					:INT;
	iStepNumbers				:ARRAY[0..10] OF INT;
	sStepDescription			:ARRAY[0..10] OF STRING;
	sPhaseTime					:STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>