<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Settings" Id="{a12d9e13-6037-4b3c-8119-fd19efc51606}">
    <Declaration><![CDATA[TYPE ST_Settings :
STRUCT
	iSP_WaterFillingMaxTime			:DINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>